--- a/s-des/类与函数简要说明.md
+++ b/s-des/类与函数简要说明.md
@@ -132,25 +132,33 @@ launch.java会启动三个窗口，分别为
 
 ```java
  private void click_ok(ActionEvent e) {}
-/** 点击后根据输入的密钥和明文生成密文，并输出到gui */
+/** 点击后根据输入的密钥和明文生成密文，并输出到gui
+    其中，
+    对于明密文为简单的0 1数字串，创建S_DES实例并调用方法
+    对于明密文为ASCII字符的字符串，创建S_DES_Enhanced实例并调用方法
+
+ */
 ```
 
 ### s_des_de的事件函数（click_ok):
 
 ```java
 private void click_ok(ActionEvent e) {}
-/** 进行反向过程，即解密，只需做细微的变量调换 */
+/** 点击后进行反向过程，即解密，和s_des的事件函数基本相同，
+    只需做细微的变量调换
+*/
 ```
 
 ### breaker的事件函数(ok_bt):
 
 ```java
 private void ok_bt(ActionEvent e){}        
-/**
+/**	点击后根据输入的明密文进行密钥破解
+        会创建一个crack实例，并在调用crack类方法的前后使用如下的方法计算程序运行时间，
+        计算所得时间即为 密钥破解时间
          * long startTime = System.currentTimeMillis();
          * long endTime = System.currentTimeMillis();
          * long executionTime = endTime - startTime;
-         *  用以计算程序运行时间
          * */
 ```
 
