--- a/s-des/类与函数简要说明.md
+++ b/s-des/类与函数简要说明.md
@@ -1,8 +1,8 @@
 # 类与函数简要说明
 
-img文件夹存放了README.md的图片资源
-resource存放GUI图片资源
-src文件下存放主要代码，分为lib和window两个package
+### img文件夹存放了README.md的图片资源
+### resource存放GUI图片资源
+### src文件下存放主要代码，分为lib和window两个package
 
 ## package lib下：
 
