--- a/s-des/类与函数简要说明.md
+++ b/s-des/类与函数简要说明.md
@@ -1,8 +1,9 @@
 # 类与函数简要说明
 
 ### img文件夹存放了README.md的图片资源
-### resource存放GUI图片资源
-### src文件下存放主要代码，分为lib和window两个package
+### resource文件夹存放GUI图片资源
+### src文件夹存放主要代码，分为lib和window两个package
+### out文件夹为java项目常规文件夹
 
 ## package lib下：
 
