--- a/s-des/类与函数简要说明.md
+++ b/s-des/类与函数简要说明.md
@@ -2,7 +2,7 @@
 
 ### img文件夹存放了README.md的图片资源
 ### resource文件夹存放GUI图片资源
-### src文件夹存放主要代码，分为lib和window两个package
+### src文件夹存放主要代码，分为lib、window、JForm三个package
 ### out文件夹为java项目常规文件夹
 
 ## package lib下：
@@ -166,4 +166,8 @@ private void ok_bt(ActionEvent e){}
          * long executionTime = endTime - startTime;
          * */
 ```
+
+## package JForm下：
+存放JFormDesigner插件的ui设计草稿，留作备用
+
 
