--- a/s-des/类与函数简要说明.md
+++ b/s-des/类与函数简要说明.md
@@ -125,11 +125,11 @@ public void begin_crack(){}
 
 launch.java会启动三个窗口，分别为
 
-- Simple DES Test-----Encrypt   负责加密   对应s_des
+- Simple DES Test-----Encrypt   负责加密   对应s_des.java
 
-* Simple DES Test-----Decrypt   负责解密  对应s_des_de
+* Simple DES Test-----Decrypt   负责解密  对应s_des_de.java
 
-* Key-Cracking   负责破解密钥  对应crack
+* Key-Cracking   负责破解密钥  对应break.java
 
   窗口均由JFormDesigner生成
 
