--- a/s-des/类与函数简要说明.md
+++ b/s-des/类与函数简要说明.md
@@ -129,7 +129,7 @@ launch.java会启动三个窗口，分别为
 
 * Simple DES Test-----Decrypt   负责解密  对应s_des_de.java
 
-* Key-Cracking   负责破解密钥  对应break.java
+* Key-Cracking   负责破解密钥  对应breaker.java
 
   窗口均由JFormDesigner生成
 
