--- a/s-des/类与函数简要说明.md
+++ b/s-des/类与函数简要说明.md
@@ -131,7 +131,7 @@ launch.java会启动三个窗口，分别为
 
 * Key-Cracking   负责破解密钥  对应breaker.java
 
-  窗口均由JFormDesigner生成
+  窗口主体框架代码均由JFormDesigner辅助生成
 
 ### s_des的事件函数（click_ok}:
 
